[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Control.gd" type="Script" id=1]
[ext_resource path="res://scenes/Save_Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/FullScreen_Toggle.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/WindowLResizeControl.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/WindowVResizeControl.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/TitleBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/WindowRResizeControl.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/fonts/red_seven.tres" type="DynamicFont" id=8]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.773773
margin_top = -1.54756
margin_right = -0.773804
margin_bottom = -1.54755
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -305.0
margin_top = 25.0
margin_right = 305.0
margin_bottom = 40.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreen_Toggle" parent="HBoxContainer" instance=ExtResource( 3 )]
margin_left = 101.0
margin_right = 421.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.956863, 0.0666667, 0.0705882, 1 )
custom_colors/font_color_hover = Color( 0, 0.905882, 1, 1 )
custom_colors/font_color_pressed = Color( 0.384314, 1, 0, 1 )
action_mode = 0

[node name="Save_Button" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_left = 425.0
margin_right = 466.0
script = ExtResource( 1 )

[node name="Load_Button" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_left = 470.0
margin_right = 509.0
text = "load"
script = ExtResource( 1 )

[node name="TitleBar" parent="." instance=ExtResource( 6 )]
margin_right = 6.10352e-05
margin_bottom = 15.0

[node name="WindowLResizeControl4" parent="." instance=ExtResource( 4 )]
anchor_bottom = 1.0
margin_right = 15.0
margin_bottom = 0.0

[node name="WindowRResizeControl5" parent="." instance=ExtResource( 7 )]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -14.9999
margin_right = 0.000183105
margin_bottom = 0.0

[node name="WindowVResizeControl2" parent="." instance=ExtResource( 5 )]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -15.0
margin_right = 6.10352e-05
margin_bottom = 0.0
[connection signal="toggled" from="HBoxContainer/FullScreen_Toggle" to="HBoxContainer/FullScreen_Toggle" method="_on_FullScreen_Toggle_toggled"]
[connection signal="pressed" from="HBoxContainer/Save_Button" to="." method="_on_Save_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/Load_Button" to="." method="_on_Load_Button_pressed"]
